vaultwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: vaultwarden-pvc
      labels:
        app: vaultwarden
    spec:
      containers:
      - name: vaultwarden
        image: vaultwarden/server:1.37.0-alpine
        livenessProbe:
          exec:
            command:
              - /healthcheck.sh
          initialDelaySeconds: 10
          periodSeconds: 60
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts:
          - name: vaultwarden-pvc
            mountPath: /config
      volumes:
        - name: vaultwarden-pvc
          persistentVolumeClaim:
            claimName: vaultwarden-pvc
