vaultwarden/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden-svc
spec:
  type: ClusterIP
  selector:
    app: vaultwarden
  ports:
  - port: 80
    targetPort: 80
