vaultwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  labels:
    name: vaultwarden
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: cloudflarewarp@file
spec:
  rules:
  - host: vaultwarden.dubyatp.xyz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: vaultwarden-svc
            port: 
              number: 80
  tls:
  - hosts:
    - vaultwarden.dubyatp.xyz
    secretName: cert-dubyatp-xyz
